Fix type in docs, change snake_case to camelCase
