# src/Controllers/StatisticsController.php
@@ -7,10 +7,10 @@ class StatisticsController extends AbstractController
     public function get(): Response
     {
         return $this->json(['data' => [
-            'questions_count' => (int)qa_opt('cache_qcount'),
-            'answers_count' => (int)qa_opt('cache_acount'),
-            'comments_count' => (int)qa_opt('cache_ccount'),
-            'users_count' => (int)qa_opt('cache_userpointscount'),
+            'questionsCount' => (int)qa_opt('cache_qcount'),
+            'answersCount' => (int)qa_opt('cache_acount'),
+            'commentsCount' => (int)qa_opt('cache_ccount'),
+            'usersCount' => (int)qa_opt('cache_userpointscount'),
         ]]);
     }
 }
